see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

07-Dec-2010 Jean-Marie Simonet
 [#23666] Attempting to log in with a non-existent account get's "Username and password do not match" message. Thanks Matt and Bill.

07-Dec-2010 Christophe Demko
 + Adding an index.html file

06-Dec-2010 Christophe Demko
 # [#23660] The menu system does not use attributes in metadata.xml files
 # [#23227] JArrayHelper::fromObject doesnt work if the object contain an array of objects

06-Dec-2010 Jean-Marie Simonet
 # [#23288] instances of ® should be html encoded. Thanks Bill.
 #$ Normalizing/implementing Submit/Save success strings/code for articles/weblinks in front-end
 # [#23651] Save failed with the following error: Another article from this category has the same alias. Thanks Mark.
 # [#23034] Article title tag is using menu title instead of article title. Thanks Mark.
 # [#23622] Hathor clean up of CSS and parameters, plus file reduction. Thanks Andrea.

05-Dec-2010 Jean-Marie Simonet
 # [#23604] Can't load twice the same loadposition on same page. Thanks Christophe.

05-Dec-2010 Christophe Demko
 # [#23474] Script code injected into module edit screen for menu assignment does not validate. (bill richardson)
 # [#23653] Differences between uncompressed and normal JS files (Rouven Weßling)
 # [#23606] Saving Profile changes generates two php warning messages (Elin Waring)

04-Dec-2010 Christophe Demko
 # [#23436] Cannot utilize more than one spacer field type in component config.xml
 # Omitting of commit in [#22606]

04-Dec-2010 Jean-Marie Simonet
 $ Adding missing ini string
 #$ Adding Phnom Penh in time zones. Updating xx-XX.ini(s)